@@ -1891,5 +1891,9 @@ cl_symbols[] = {
 {EXT_ "*DEFAULT-EXTERNAL-FORMAT*", EXT_SPECIAL, NULL, -1, Ct},
 {KEY_ "PASS-THROUGH", KEYWORD, NULL, -1, OBJNULL},
 
+{EXT_ "WITH-BACKEND", EXT_ORDINARY, NULL, -1, OBJNULL},
+{KEY_ "BYTECODES", KEYWORD, NULL, 1, OBJNULL},
+{KEY_ "C/C++", KEYWORD, NULL, 1, OBJNULL},
+
 /* Tag for end of list */
 {NULL, CL_ORDINARY, NULL, -1, OBJNULL}};
